# docs/swagger.json
@@ -3,13 +3,22 @@
     "info": {
         "description": "This is Bill Payment API Server From KBank-API.",
         "title": "Bill Payment API",
-        "contact": {},
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "API Support",
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
         "version": "1.0"
     },
     "paths": {
         "/api/billers": {
             "get": {
-                "description": "Show all biller_account.",
+                "description": "Show all biller_account, it's for store.",
                 "consumes": [
                     "*/*"
                 ],
@@ -28,6 +37,18 @@
                             "items": {
                                 "$ref": "#/definitions/model.BillAccount"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Create Biller_account failed",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Biller_account not found",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -63,6 +84,12 @@
                             "items": {
                                 "$ref": "#/definitions/model.BillAccount"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Create Biller_account failed",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -164,6 +191,12 @@
                                 "$ref": "#/definitions/model.Bill"
                             }
                         }
+                    },
+                    "500": {
+                        "description": "Bill not found",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             },
@@ -199,6 +232,15 @@
                                 "$ref": "#/definitions/model.Bill"
                             }
                         }
+                    },
+                    "400": {
+                        "description": "Create Bill failed",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
                     }
                 }
             }
@@ -225,6 +267,12 @@
                                 "$ref": "#/definitions/model.Bill"
                             }
                         }
+                    },
+                    "400": {
+                        "description": "Update Bill failed",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
@@ -250,6 +298,12 @@
                             "items": {
                                 "$ref": "#/definitions/model.Customer"
                             }
+                        }
+                    },
+                    "500": {
+                        "description": "Customer not found",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -285,6 +339,12 @@
                             "items": {
                                 "$ref": "#/definitions/model.Customer"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Create Customer failed",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -322,6 +382,18 @@
                             "items": {
                                 "$ref": "#/definitions/model.Customer"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Customer by ID failed",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Customer by ID not found",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
